--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,18 @@
+#signout {
+  font-family: Helvetica;
+  font-size: 12px;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid black;
+  text-align: center;
+  width: 5%;
+}
 
+.selectbutton{
+  font-family: Helvetica;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid black;
+  text-align: center;
+  width: 10%;
+}
