--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+body{
+  background-image: url("../images/table.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
 #signout {
   font-family: Helvetica;
   font-size: 12px;
@@ -5,14 +12,48 @@
   margin: 10px;
   border: 1px solid black;
   text-align: center;
-  width: 5%;
+  position: absolute;
+  right: 0px;
+  width: 7%;
 }
 
 .selectbutton{
+  width: 15%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.selectbutton, #signout{
   font-family: Helvetica;
   padding: 10px;
   margin: 10px;
   border: 1px solid black;
   text-align: center;
-  width: 10%;
+  background-color: black;
+  border-radius: 20px;
+}
+
+
+.selectbutton a, #signout a{
+  text-decoration: none;
+  color: white;
+}
+
+.selectbutton:hover{
+  background-color: white;
+  border: 2px dotted black;
+}
+
+.selectbutton a:hover{
+  color: black;
+  text-transform: uppercase;
+}
+
+ #signout:hover{
+   background-color: white;
+   border: 2px dotted black;
+ }
+#signout a:hover{
+  color: black;
+  text-transform: uppercase;
 }
