--- a/css/main.css
+++ b/css/main.css
@@ -4,25 +4,6 @@ body{
   background-size: cover;
 }
 
-
-#signout {
-  font-family: Helvetica;
-  font-size: 12px;
-  padding: 10px;
-  margin: 10px;
-  border: 1px solid black;
-  text-align: center;
-  position: absolute;
-  right: 0px;
-  width: 7%;
-}
-
-.selectbutton{
-  width: 15%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .selectbutton, #signout{
   font-family: Helvetica;
   padding: 10px;
@@ -33,6 +14,29 @@ body{
   border-radius: 20px;
 }
 
+#signout {
+  font-family: Helvetica;
+  font-size: 12px;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid black;
+  text-align: center;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 7%;
+}
+
+
+.selectbutton{
+  width: 15%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#pickup{
+  margin-top: 22%;
+}
 
 .selectbutton a, #signout a{
   text-decoration: none;
