--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ body{
   border: 2px dotted black;
 }
 
-.selectbutton a:hover{
+.selectbutton:hover a{
   color: black;
   text-transform: uppercase;
 }
@@ -57,7 +57,7 @@ body{
    background-color: white;
    border: 2px dotted black;
  }
-#signout a:hover{
+#signout:hover a{
   color: black;
   text-transform: uppercase;
 }
