--- a/css/pair.css
+++ b/css/pair.css
@@ -58,8 +58,8 @@ body{
   border-radius: 20px;
   margin-top: 10px;
   position: absolute;
-  right: 5px;
-  bottom: 5px;
+  right: 36%;
+  bottom: 37%;
   width: 7%;
 }
 
