--- a/css/drop.css
+++ b/css/drop.css
@@ -2,10 +2,19 @@ body{
   background-color: #f9f9f9;
 }
 
+.overlay{
+  background-color: white;
+  border-radius: 10px;
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;             /*horizontal center*/
+  margin-top: 7%;             /*vertical center*/
+}
+
 #phrase {
   font-family: Helvetica;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 15px;
   /*padding: 10px;
   margin: 10px;
   border: 1px solid black;
@@ -23,6 +32,10 @@ body{
   background-color: black;
   border-radius: 20px;
   margin-top: 10px;
+  position: absolute;
+  right:56%;
+  bottom: 30%;
+  width: 7%;
 }
 
 #submit{
@@ -34,6 +47,10 @@ body{
   background-color: black;
   border-radius: 20px;
   margin-top: 10px;
+  position: absolute;
+  right: 36%;
+  bottom: 30%;
+  width: 7%;
 }
 
 #back a, #submit a{
