--- a/css/time.css
+++ b/css/time.css
@@ -6,21 +6,33 @@ body{
   background-color: white;
   border-radius: 10px;
   width: 400px;
-  height: 400px;
+  height: 290px;
   margin: 0 auto;             /*horizontal center*/
   margin-top: 7%;             /*vertical center*/
 }
 
 #phrase {
-  font-family: Helvetica;
+  font-family: Futura;
   text-transform: uppercase;
-  font-size: 15px;
-  /*padding: 10px;
+  font-size: 13px;
+  padding: 10px;
   margin: 10px;
-  border: 1px solid black;
-  text-align: center;
-  width: 20%;
-  border-radius: 20px;*/
+  text-align: left;
+}
+
+#range {
+  padding: 10px;
+  margin: 10px;
+  font-size: 12px;
+  text-align: left;
+  font-family: Futura;
+}
+
+#val {
+  padding: 10px;
+  margin: 10px;
+  text-align: left;
+  font-family: Futura;
 }
 
 #back{
@@ -33,9 +45,9 @@ body{
   border-radius: 20px;
   margin-top: 10px;
   position: absolute;
-  right:56%;
-  bottom: 30%;
-  width: 7%;
+  right:41.5%;
+  bottom: 45%;
+  width: 5%;
 }
 
 #submit{
@@ -49,8 +61,8 @@ body{
   margin-top: 10px;
   position: absolute;
   right: 36%;
-  bottom: 30%;
-  width: 7%;
+  bottom: 45%;
+  width: 5%;
 }
 
 #back a, #submit a{
