--- a/css/type.css
+++ b/css/type.css
@@ -2,37 +2,46 @@ body{
   background-color: #f9f9f9;
 }
 
-.overlay{
+.overlay {
   background-color: white;
   border-radius: 10px;
   width: 400px;
-  height: 290px;
-  margin: 0 auto;             /*horizontal center*/
-  margin-top: 7%;             /*vertical center*/
+  height: auto;
+  margin: 0 auto;
 }
 
-#phrase {
-  font-family: Futura;
-  text-transform: uppercase;
-  font-size: 13px;
-  padding: 10px;
-  margin: 10px;
-  text-align: left;
+#drop_overlay{
+  margin-top: 10%;
 }
 
-#range {
-  padding: 10px;
-  margin: 10px;
-  font-size: 12px;
-  text-align: left;
-  font-family: Futura;
+#pick_overlay{
+  margin-top: 8%;
 }
 
-#val {
-  padding: 10px;
-  margin: 10px;
-  text-align: left;
+.field{
+  height: 35px;
+  border: 1px solid #e2e2e2;
+  border-radius: 5px;
+  width: 80%;
+  margin: 0 auto;
+  font-family: Helvetica;
+}
+
+.title{
   font-family: Futura;
+  font-size: 15px;
+  margin-top: 7%;
+}
+
+.ps{
+  font-family: Helvetica;
+  font-size: 15px;
+  margin-left: 7%;
+}
+
+#or {
+  font-family: Futura;
+  font-size: 16px;
 }
 
 .navbutton{
@@ -43,9 +52,8 @@ body{
   text-align: center;
   background-color: black;
   border-radius: 20px;
-  margin-top: 10px;  
+  margin-top: 10px;
 }
-
 
 .navbutton a{
   text-decoration: none;
@@ -61,3 +69,4 @@ body{
   color: black;
   text-transform: uppercase;
 }
+
