--- a/css/user.css
+++ b/css/user.css
@@ -12,21 +12,21 @@ body{
   text-align: center;
 }
 
-.overlay{
+.overlay {
   background-color: white;
   border-radius: 10px;
   width: 400px;
-  height: 290px;
-  margin: 0 auto;             /*horizontal center*/
-  margin-top: 7%;             /*vertical center*/
+  height: auto;
+  margin: 0 auto;
 }
 
-#sorry {
+#rate{
   font-family: Futura;
-  text-transform: uppercase;
   font-size: 15px;
-  padding: 60px;
+  padding: 10px;
   margin: 10px;
+  border: 1px solid black;
+  text-align: center;
 }
 
 .navbutton{
