--- a/css/pair.css
+++ b/css/pair.css
@@ -10,8 +10,15 @@ body{
   margin: 10px;
   border: 1px solid black;
   text-align: center;
-  width: 20%;
-  border-radius: 20px;
+}
+
+.overlay{
+  background-color: white;
+  border-radius: 10px;
+  width: 400px;
+  height:400px;
+  margin: 0 auto;             /*horizontal center*/
+  margin-top: 7%;             /*vertical center*/
 }
 
 #pic{
@@ -23,7 +30,7 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 35%;
+  width: 75%;
 }
 
 .user{
@@ -31,24 +38,20 @@ body{
   font-size: 15px;
   padding: 10px;
   margin: 10px;
-  border: 1px solid black;
   text-align: center;
-  background-color: black;
-  border-radius: 20px;
+  border: 1px solid black;
 }
 
 .info{
   font-family: Helvetica;
   font-size: 15px;
-  padding: 10px;
-  margin: 10px;
-  border: 1px solid black;
+  padding: 5px;
+  margin: 5px;
   text-align: center;
-  background-color: black;
-  border-radius: 20px;
+  border: 1px solid black;
 }
 
-#home{
+.navbutton{
   font-family: Helvetica;
   font-size: 15px;
   padding: 10px;
@@ -57,15 +60,11 @@ body{
   background-color: black;
   border-radius: 20px;
   margin-top: 10px;
-  position: absolute;
-  right: 36%;
-  bottom: 37%;
-  width: 7%;
 }
 
 .info, #home a, .user a, #name1{
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 #name2:hover{
@@ -78,12 +77,17 @@ body{
   text-transform: uppercase;
 }
 
-#home:hover{
+.navbutton a{
+  text-decoration: none;
+  color: white;
+}
+
+.navbutton:hover{
   background-color: white;
   border: 2px dotted black;
 }
 
-#home:hover a{
+.navbutton:hover a{
   color: black;
   text-transform: uppercase;
 }
