--- a/css/main.css
+++ b/css/main.css
@@ -4,22 +4,8 @@ body{
   background-size: cover;
 }
 
-.selectbutton, #signout{
-  font-family: Helvetica;
-  padding: 10px;
-  margin: 10px;
-  border: 1px solid black;
-  text-align: center;
-  background-color: black;
-  border-radius: 20px;
-}
-
 #signout {
-  font-family: Helvetica;
-  font-size: 12px;
-  padding: 10px;
   margin: 10px;
-  border: 1px solid black;
   text-align: center;
   position: absolute;
   right: 0px;
@@ -27,11 +13,24 @@ body{
   width: 7%;
 }
 
+#signout a{
+  background-color: black;
+  font-family: Helvetica;
+  font-size: 12px;
+}
 
 .selectbutton{
-  width: 15%;
+  width: 125px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.selectbutton a{
+  background-color: black;
+  font-family: Helvetica;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 125px;
 }
 
 #pickup{
@@ -41,23 +40,4 @@ body{
 .selectbutton a, #signout a{
   text-decoration: none;
   color: white;
-}
-
-.selectbutton:hover{
-  background-color: white;
-  border: 2px dotted black;
-}
-
-.selectbutton:hover a{
-  color: black;
-  text-transform: uppercase;
-}
-
- #signout:hover{
-   background-color: white;
-   border: 2px dotted black;
- }
-#signout:hover a{
-  color: black;
-  text-transform: uppercase;
 }
