--- a/css/pair.css
+++ b/css/pair.css
@@ -24,9 +24,10 @@ body{
   background-color: white;
   border-radius: 10px;
   width: 400px;
-  height:400px;
+  height:450px;
   margin: 0 auto;             /*horizontal center*/
   margin-top: 7%;             /*vertical center*/
+  position: relative;
 }
 
 #pic{
@@ -70,6 +71,9 @@ body{
 .navbutton{
   text-align: center;
   /*margin-top: 10px;*/
+  position: absolute;
+  bottom: 5px;
+  left: 48%;
 }
 
 .info, #home a, .user a, #name1{
@@ -78,7 +82,6 @@ body{
 }
 
 .glyphicon{
-  position: relative;
   /*left: 100px;*/
   padding-top: 20px;
   font-size: 20px;
