--- a/css/noPair.css
+++ b/css/noPair.css
@@ -1,14 +1,20 @@
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Poppins Regular'), local('Poppins-Regular'), url(https://fonts.gstatic.com/s/poppins/v5/pxiEyp8kv8JHgFVrJJfecnFHGPc.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 body{
   background-color: #f9f9f9;
 }
 
 #title {
-  font-family: Futura;
+  font-family: Poppins, Helvetica;
   text-transform: uppercase;
   font-size: 36px;
-  padding: 10px;
   margin: 10px;
-  border: 1px solid black;
   text-align: center;
 }
 
@@ -18,39 +24,36 @@ body{
   width: 400px;
   height: 290px;
   margin: 0 auto;             /*horizontal center*/
-  margin-top: 7%;             /*vertical center*/
+  margin-top: 12%;             /*vertical center*/
+  position: relative;
 }
 
 #sorry {
-  font-family: Futura;
+  font-family: Poppins, Helvetica;
   text-transform: uppercase;
   font-size: 15px;
-  padding: 60px;
+  padding: 50px;
   margin: 10px;
 }
 
 .navbutton{
   font-family: Helvetica;
   font-size: 15px;
-  padding: 10px;
-  border: 1px solid black;
   text-align: center;
-  background-color: black;
-  border-radius: 20px;
   margin-top: 10px;
+  position: absolute;
+  bottom: 5px;
+  left: 48%;
 }
 
 .navbutton a{
   text-decoration: none;
-  color: white;
+
 }
 
-.navbutton:hover{
-  background-color: white;
-  border: 2px dotted black;
-}
-
-.navbutton:hover a{
-  color: black;
-  text-transform: uppercase;
+.glyphicon{
+  /*left: 100px;*/
+  padding-top: 20px;
+  font-size: 20px;
+  text-decoration: none;
 }
