--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,15 @@ body{
   background-size: cover;
 }
 
+#about{
+  margin: 10px;
+  right: 18px;
+  width: 7%;
+  position: absolute;
+  top: 0px;
+  right: 80px;
+}
+
 #signout {
   margin: 10px;
   text-align: center;
@@ -13,14 +22,14 @@ body{
   width: 7%;
 }
 
-#signout a{
+#signout a, #about a{
   background-color: black;
   font-family: Helvetica;
   font-size: 12px;
 }
 
 .selectbutton{
-  width: 125px;
+  width: 200px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -30,7 +39,7 @@ body{
   font-family: Helvetica;
   margin-bottom: 10px;
   text-align: center;
-  width: 125px;
+  width: 200px;
 }
 
 #pickup{
