--- a/css/meetups2.css
+++ b/css/meetups2.css
@@ -12,6 +12,25 @@ body{
   background-color: #f9f9f9;
 }
 
+ul{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li{
+  float: left;
+}
+
+li a{
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+}
 
 .card{
   background-color: white;
