--- a/css/meetups2.css
+++ b/css/meetups2.css
@@ -45,6 +45,7 @@ li a {
     color: white;
     text-align: center;
     text-decoration: none;
+    transition: 0.3s;
 }
 
 li a:hover{
@@ -63,7 +64,9 @@ li a:hover{
   border-radius: 10px;
   border: white;
   width: 400px;
-  height: 230px;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
   margin: 0 auto;             /*horizontal center*/
   margin-top: 5%;
 }
@@ -114,6 +117,7 @@ li a:hover{
   margin: 0 auto;
   text-transform: uppercase;
   margin-top: 20px;
+  margin-bottom: 10px;
   border-radius: 5px;
 }
 
