--- a/css/pair.css
+++ b/css/pair.css
@@ -90,7 +90,7 @@ body{
   color: black;
 }
 
-#shop {
+.shop {
   margin: 0 auto;
   text-align: center;
 }
@@ -102,10 +102,10 @@ div #shop {
   background-color: green;
   border-color: green;
   padding: 10px;
-  width: 50%;
+  width: 35%;
   margin-bottom: 40px;
   text-transform: uppercase;
-  margin-top: 20px;
+  margin-top: 10px;
   border-radius: 5px;
 }
 
