--- a/css/type.css
+++ b/css/type.css
@@ -10,6 +10,52 @@ body{
   background-color: #f9f9f9;
 }
 
+/*NAVIGATION STYLE*/
+nav{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+
+ul {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    font-family: Poppins, Helvetica;
+    font-size: 13px;
+    text-transform: uppercase;
+    /*padding: 10px;*/
+}
+
+li {
+    float: right;
+    padding: 14px 16px;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+li a:hover{
+  background-color: #555;
+  color: white;
+}
+
+#logo {
+  width: 60px;
+  height: 60px;
+}
+
 .overlay {
   background-color: white;
   border-radius: 10px;
